--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "socket.io": "latest",
     "hyperswarm": "latest",
     "ws": "latest",
-    "ethers": "latest"
+      "ethers": "^5.7.1"
   },
   "type": "module",
   "author": "Your Name",
